# llm-software-factory

./: .gitignore  README.md  pyproject.toml
code/ui/: .gitignore  README.md  UI_GUIDELINES.md  package-lock.json  package.json
code/ui/src/app/: globals.css  layout.tsx  page.tsx
code/ui/src/app/api/factory/: route.ts
code/ui/src/app/api/factory/validate-path/: route.ts
code/ui/src/components/factory/: prompt-studio.tsx  run-report.tsx
code/ui/src/components/layout/: atmosphere.tsx
code/ui/src/components/sections/: cta-section.tsx  hero-section.tsx  module-grid-section.tsx  principles-section.tsx
code/ui/src/content/: home.ts
code/ui/src/lib/factory/: blueprint.ts  crawl.ts  intent.ts  prompt-pipeline.ts  scaffold.ts  screenshots.ts  target-selection.ts  types.ts
src/llm_software_factory/: __init__.py  __main__.py  main.py
tests/: test_smoke.py
